# Masked-Diffusions

./: .gitignore  Colab_1_Data_Prep.ipynb  Colab_2_LO_NAE_SAT.ipynb  Colab_3_Sudoku_Zebra.ipynb  Colab_4_Scaling_Laws.ipynb  Colab_5_Text_GenPPL.ipynb  Colab_6_LLaDA_8B.ipynb  Colab_7_BP_and_Plots.ipynb  README.md  REPRODUCTION_GUIDE_Phase1_Infrastructure_and_Training.md  REPRODUCTION_GUIDE_Phase2_Inference_and_Experiments.md  REPRODUCTION_GUIDE_Phase3_Integration_and_Troubleshooting.md  REPRODUCTION_GUIDE_REVISED_Complete.md  bug_log.md  code_audit.md  experimental_matrix.md  methodology_notes.md  paper_notes.md  phase1_inventory.md  sudoku_scope_decision.md
baseline/: README.md  pyproject.toml
baseline/configs/: lo_nae_sat_100_200.yaml  lo_nae_sat_25_275.yaml  lo_nae_sat_30_270.yaml  lo_nae_sat_40_260.yaml  lo_nae_sat_50_250.yaml  lo_nae_sat_smoke.yaml
baseline/scripts/: smoke_test.py  smoke_test.sh
baseline/src/: __init__.py  data.py  diffusion.py  evaluate.py  inference.py  model.py  run_eval_only.py  sudoku.py  train.py  utils.py
baseline/tests/: conftest.py  test_determinism.py  test_forward_process.py  test_inference.py  test_lo_nae_sat.py  test_loss.py  test_resume.py  test_sudoku.py
entropy_filtered/: README.md
scripts/: aggregate_findings.py  medium_smoke.py  select_best_variant.py
slurm/: 00_setup.sh  01_smoke.sh  02_production_array.sh  03_calibration.sh  04_phase_b_baseline.sh  05_phase_c_filter.sh  06_phase_d_random.sh  07_phase_e_seedbump.sh  08_phase_f_eval10k.sh  09_phase_b_25_275_regumbel.sh  PHASE0_RUNBOOK.md  _render_scripts.sh  (+1 more)
(+45 files in other folders)
